# storage/api-docs/api-docs.json
@@ -64,7 +64,6 @@
                         "name": "paymentId",
                         "in": "path",
                         "description": "ID of the payment",
-                        "required": true,
                         "schema": {
                             "type": "integer",
                             "format": "int64"
@@ -77,6 +76,54 @@
                     },
                     "404": {
                         "description": "Payment not found"
+                    }
+                }
+            }
+        },
+        "/api/testconnection": {
+            "post": {
+                "tags": [
+                    "Test"
+                ],
+                "summary": "Test connection between clustered services",
+                "description": "Test connection between clustered services.",
+                "operationId": "testconnection",
+                "parameters": [
+                    {
+                        "name": "endpoint",
+                        "in": "path",
+                        "description": "Service endpoint",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "endpoint": {
+                                        "type": "string",
+                                        "example": "http://webapp-service:3000/events"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Get contents"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
